fix: TC validation working, add patient click debugging
